Bug 410355 - inotify_add_watch("~/.dropbox/aggregation.dbx") failed: "No such file or directory"
Summary: inotify_add_watch("~/.dropbox/aggregation.dbx") failed: "No such file or dire...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: dropbox (other bugs)
Version First Reported In: 19.07.80
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Emmanuel Pescosta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-29 13:33 UTC by vialav
Modified: 2019-08-08 21:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vialav 2019-07-29 13:33:11 UTC
I'm using the latest sources of KIO and Dolphin. Upon launching Dolphin from a terminal one can observer the following: 

kf5.kio.core: "Could not enter folder tags:/."
inotify_add_watch("/home/khalak/.dropbox/aggregation.dbx") failed: "No such file or directory"

How can I trace down the origin of both of those two messages, and debug it? I have multiline tags and comments working just ok in 'Properties', so, why does not tags:/ namespace work for me (there is no detailed trace in the log)? On the contrary, namespace timeline:/ and friends is accessible.

I have also opened corresponding Bug 410354 on frameworks-kio
Comment 1 vialav 2019-07-29 13:37:28 UTC
$ env QT_MESSAGE_PATTERN="%{appname} - %{message}" kdeinit5
$ env QT_MESSAGE_PATTERN="%{appname} - %{message}" dolphin
kdeinit5: Got EXEC_NEW '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/tags.so' from launcher.
kdeinit5: preparing to launch '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/tags.so'
kdeinit5: Got EXEC_NEW '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/trash.so' from launcher.
kdeinit5: preparing to launch '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/trash.so'
kdeinit5: Got EXEC_NEW '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/file.so' from launcher.
kdeinit5: preparing to launch '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/file.so'
kio_tags - tag fetch failed: "Failed to open the database"
kio_tags - "tags:/" list() invalid url
kdeinit5: Got EXEC_NEW '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/file.so' from launcher.
kdeinit5: preparing to launch '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/file.so'
dolphin - "Could not enter folder tags:/."
kdeinit5: Got EXEC_NEW '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/file.so' from launcher.
kdeinit5: preparing to launch '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/file.so'
dolphin - inotify_add_watch("/home/khalak/.dropbox/aggregation.dbx") failed: "No such file or directory"
Comment 2 Nate Graham 2019-08-05 00:39:06 UTC
Does /home/khalak/.dropbox/aggregation.dbx exist?
Comment 3 vialav 2019-08-06 10:35:44 UTC
No, it does not. The latest Dropbox does not create such a database.
Comment 4 vialav 2019-08-06 10:37:51 UTC
$ find $HOME/.dropbox -name aggregation.dbx
~/.dropbox/instance4/aggregation.dbx
Comment 5 vialav 2019-08-06 10:40:34 UTC
$ ll --tree $HOME/.dropbox # (it's a custom 'll')

 ├──     command_socket  
 ├──     dropbox.pid  
 └──     events/ 
 ├──     host.db  
 ├──     iface_socket  
 ├──     info.json  
 └──     instance1/ 
 │  └────     unlink.db  
 └──     instance2/ 
 └──     instance3/ 
 └──     instance4/ 
 │  ├────     aggregation.dbx  
 │  ├────     checker.dbx  
 │  ├────     config.dbx  
 │  ├────     deleted.dbx  
 │  ├────     filecache.dbx  
 │  ├────     hostkeys  
 │  ├────     resync.dbx  
 │  ├────     sigstore.dbx  
 │  └────     TO_HASH_b8bedziv  
 └──     instance_db/ 
 │  ├────     hostkeys  
 │  └────     instance.dbx  
 └──     logs/ 
 │  └────     0/ 
<truncated>
 │  └────     4ro/
 └──     machine_storage/
 └──     unlink.db
Comment 6 Nate Graham 2019-08-06 14:43:14 UTC
What does `balooshow /home/khalak/.dropbox/aggregation.dbx` say?
Comment 7 vialav 2019-08-06 20:27:05 UTC
$ balooshow ~/.dropbox/aggregation.dbx
The Baloo index could not be opened. Please run "balooctl status" to see if Baloo is enabled and working.

$ balooctl status
Baloo is currently disabled. To enable, please run balooctl enable

$ balooctl enable
Enabling and starting the File Indexer
KCatalog being used without a Q*Application instance. Some translations won't work

$ balooshow ~/.dropbox/aggregation.dbx
~/.dropbox/aggregation.dbx: Not a valid URL or document ID

$ balooctl disable
Disabling and stopping the File Indexer
Comment 8 Nate Graham 2019-08-06 22:23:02 UTC
I wonder if it's the Dropbox integration plugin that's doing it. Does the message go away if you disable the Dropbox service (if you have it installed and enabled)?
Comment 9 vialav 2019-08-07 07:59:40 UTC
> I wonder if it's the Dropbox integration plugin that's doing it. Does the message go away if you disable the Dropbox service (if you have it installed and enabled)?

I have no doubts about it. Disabled the Dropbox service and the message went away. Enabled it, and it came back. 


P.S. On a positive albeit unrelated note, Bug 410354 is no longer present on my system, I see all my tags, and able to navigate the tags:/ tree. Apparently, toggling balooctl was the required and hidden automagic, this shall be documented somewhere. Closing that in kio-frameworks.
Comment 10 Nate Graham 2019-08-07 15:00:35 UTC
Confirmed. Here's a patch: https://phabricator.kde.org/D22993

Works for me, but it would be nice if you could test it too!
Comment 11 vialav 2019-08-07 15:11:12 UTC
> Dolphin no longer shows inotify_add_watch("~/.dropbox/aggregation.dbx") failed: "No such file or directory" in the console output

Surely, however, isn't it the same file, in (possibly new) the following location?: ~/.dropbox/instance4/aggregation.dbx (or may be it is machine-related)

I simply don't know the intrinsics of the Dropbox service as good as the KDE developers do.
Comment 12 Nate Graham 2019-08-07 15:25:12 UTC
The fact that this has been failing for years with no apparent negative consequences is a pretty good argument for removing it. But you're right that the file has moved somewhere else. I'll do some research.
Comment 13 Nate Graham 2019-08-07 15:47:46 UTC
I've updated the patch.
Comment 14 vialav 2019-08-07 20:29:55 UTC
I've just tested the patch and it has fixed my issue. Thank you for your coding. 

I wondered where the stop-looking-for-nonexistent-file branch was planted as I could not find it on anongit.kde.org, and ended up downloading the raw diff from D22993.

Compiled with -Wsuggest-override there where some further overall suggestions, which are unrelated to this issue. Closing it as kindly fixed.
Comment 15 Nate Graham 2019-08-07 22:08:06 UTC
(In reply to vialav from comment #14)
> I've just tested the patch and it has fixed my issue. Thank you for your
> coding. 
Excellent! Of note, the bug can't be closed yet because the patch hasn't actually gotten merged. Since you've tested it and verified that it works, it would be very helpful if you could post a comment on https://phabricator.kde.org/D22993 mentioning this (you can even formally accept). That would help get it merged faster.

> I wondered where the stop-looking-for-nonexistent-file branch was planted as
> I could not find it on anongit.kde.org, and ended up downloading the raw
> diff from D22993.
Yep, that was the right way to do it (for now; once we move to GitLab there will be branches you can download).

> Compiled with -Wsuggest-override there where some further overall
> suggestions, which are unrelated to this issue. Closing it as kindly fixed.
Please feel free to submit a patch that fixes those issues! See https://community.kde.org/Infrastructure/Phabricator to learn how. You can just paste a raw diff if you don't want to set up arcanist on your machine.
Comment 16 Nate Graham 2019-08-08 18:35:53 UTC
Git commit db88a5696882fb74d84657d78a7771558889e3c6 by Nate Graham.
Committed on 08/08/2019 at 18:34.
Pushed by ngraham into branch 'Applications/19.08'.

Find aggregation.dbx at its new location

Summary: This file hasn't existed at that location for years. This patch updates the logic to find it at one of the several locations where it may live now.

Test Plan:
Dolphin no longer shows `inotify_add_watch("/home/name/.dropbox/aggregation.dbx") failed: "No such file or directory"` in the console output
FIXED-IN: 19.08.1

Reviewers: #dolphin, vialav

Reviewed By: vialav

Subscribers: vialav

Differential Revision: https://phabricator.kde.org/D22993

M  +13   -2    dropbox/fileviewdropboxplugin.cpp

https://commits.kde.org/dolphin-plugins/db88a5696882fb74d84657d78a7771558889e3c6