Find aggregation.dbx at its new location

Summary: This file hasn't existed at that location for years. This patch updates the logic to find it at one of the several locations where it may live now.

Test Plan:
Dolphin no longer shows `inotify_add_watch("/home/name/.dropbox/aggregation.dbx") failed: "No such file or directory"` in the console output

BUG: 410355
FIXED-IN: 19.08.1

Reviewers: #dolphin, vialav

Reviewed By: vialav

Subscribers: vialav

Differential Revision: https://phabricator.kde.org/D22993